# projetos_simulacao

simulacao-salabim-simpy/: Dockerfile  pyproject.toml  readme.md  requirements.txt
simulacao-salabim-simpy/src/scripts_salabim/: caminhao_doca.py  operador_armazem.py
simulacao-salabim-simpy/src/scripts_simpy/: caminhao_doca.py
