[project]
name = "src"
version = "1.0.0"
description = "Simulacação de cenários de eventos discretos com Salabim e Simpy"
authors = [
    {name = "Eder Ray da Silva Francisco"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "salabim (>=25.0.15.post0,<26.0.0)",
    "simpy (>=4.1.1,<5.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = ">=6.0.1,<7.0.0"
flake8 = ">=7.3.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
